prevent image overlapping

--- a/css/master.css
+++ b/css/master.css
@@ -620,19 +620,18 @@ main > .container {
 }
 
 /*Code Pen Magnifying glass*/
-.glass {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  border-radius: 50%;
-  cursor: none;
-  
-  /* Multiple box shadows to achieve the glass effect */
-  box-shadow:
-    0 0 0 7px rgba(255, 255, 255, 0.85),
-    0 0 7px 7px rgba(0, 0, 0, 0.25), 
-    inset 0 0 40px 2px rgba(0, 0, 0, 0.25);
-  
-  /* hide the glass by default */
-  display: none;
+figure.product {
+  background-position: 50% 50%;
+  position: relative;
+  /*width: 500px;*/
+  overflow: hidden;
+  cursor: zoom-in;
+}
+figure.product img:hover {
+  opacity: 0;
+}
+figure.product img {
+  transition: opacity .5s;
+  display: block;
+  width: 100%;
 }
